# src/routes/auth.js
@@ -1,9 +1,10 @@
 // src/routes/auth.js
 const router = require('express').Router();
 const authController = require('../controllers/authController');
+const auth = require('../middlewares/authentication');
 
 router.post('/register', authController.register);
 router.post('/login', authController.login);
-router.get('/protected', authController.protected);
+router.get('/protected', auth, authController.protected);
 
 module.exports = router;
